tests/expected_invalid_generic_record_construct_non_generic_args.diag.out
<input>:9:5: error: record 'Number' is not generic but was constructed with type arguments
        support::Number<Int> { value: 7 }.value
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
